--- a/projects/oblique/src/styles/scss/themes/material/variables.scss
+++ b/projects/oblique/src/styles/scss/themes/material/variables.scss
@@ -3,3 +3,6 @@ $form-field-label-height: 0.75em !default;
 $form-field-padding-top: 0.25em !default;
 $form-field-padding-top-sm: 0.05em !default;
 $form-field-padding-top-lg: 0.75em !default;
+$form-field-label-padding-top: 0.33em !default;
+$form-field-label-padding-top-sm: 0.10em !default;
+$form-field-label-padding-top-lg: 0.80em !default;
